--- a/shellclass/multitest/Vagrantfile
+++ b/shellclass/multitest/Vagrantfile
@@ -12,9 +12,19 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "shellclass"
-  config.vm.hostname = "testbox01"
-  config.vm.network "private_network", ip: "10.9.8.7"
+  config.vm.box = "jasonc/centos7"
+  
+  config.vm.define "test1" do |test1|
+	test1.vm.hostname = "test1"
+	test1.vm.network "private_network", ip: "10.9.8.5"
+  end
+  
+  config.vm.define "test2" do |test2| 
+	test2.vm.hostname = "test2"
+	test2.vm.network "private_network", ip: "10.9.8.6"
+  end
+	
+	
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
